--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bd.org.coronacare">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".emergency.EmergencyActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".main.analysis.AnalysisResultActivity"></activity>
+        <activity android:name=".profile.edit.EditProfileActivity" />
+        <activity android:name=".emergency.EmergencyActivity" />
         <activity android:name=".about.AboutActivity" />
         <activity android:name=".main.MainActivity">
             <intent-filter>
