Change Mobile Number Completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,23 +12,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".login.mobile.LoginWithMobileOTPActivity"/>
-        <activity android:name=".login.mobile.LoginWithMobileActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".profile.edit.ChangeMobileOTPActivity"></activity>
+        <activity android:name=".profile.edit.ChangeMobileActivity" />
+        <activity android:name=".login.mobile.LoginWithMobileOTPActivity" />
+        <activity android:name=".login.mobile.LoginWithMobileActivity" />
         <activity
             android:name=".login.LoginOptionsActivity"
-            android:theme="@style/AppTheme.DarkStatusBar"/>
+            android:theme="@style/AppTheme.DarkStatusBar" />
         <activity android:name=".main.analysis.AnalysisResultActivity" />
         <activity android:name=".profile.edit.EditProfileActivity" />
         <activity android:name=".emergency.EmergencyActivity" />
         <activity android:name=".about.AboutActivity" />
         <activity android:name=".main.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
