--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".profile.edit.ChangeMobileOTPActivity"></activity>
+        <activity android:name=".main.plasma.PlasmaDonorSearchActivity"></activity>
+        <activity android:name=".profile.view.UserProfileActivity" />
+        <activity android:name=".profile.edit.ChangeMobileOTPActivity" />
         <activity android:name=".profile.edit.ChangeMobileActivity" />
         <activity android:name=".login.mobile.LoginWithMobileOTPActivity" />
         <activity android:name=".login.mobile.LoginWithMobileActivity" />
