--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="bd.org.coronacare">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".main.plasma.PlasmaDonorSearchActivity"></activity>
+        <activity android:name=".main.plasma.PlasmaDonorSearchActivity"/>
         <activity android:name=".profile.view.UserProfileActivity" />
         <activity android:name=".profile.edit.ChangeMobileOTPActivity" />
         <activity android:name=".profile.edit.ChangeMobileActivity" />
