--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".main.plasma.PlasmaDonorSearchActivity"/>
+        <activity android:name=".profile.view.DoctorProfileActivity"></activity>
+        <activity android:name=".main.plasma.PlasmaDonorSearchActivity" />
         <activity android:name=".profile.view.UserProfileActivity" />
         <activity android:name=".profile.edit.ChangeMobileOTPActivity" />
         <activity android:name=".profile.edit.ChangeMobileActivity" />
