--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.chaos.view:pinview:1.4.4'
     implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
